# GraphicsPlayground

./: ..gitignore.un~  .gitignore  CMakeLists.txt  readme.md
examples/demo/: CMakeLists.txt  DemoApp.cpp  DemoApp.h  main.cpp
examples/demo/components/: RotateComponent.h
examples/demo/systems/: CameraMovementSystem.cpp  CameraMovementSystem.h  RotateSystem.cpp  RotateSystem.h
examples/space_invaders/: CMakeLists.txt  SpaceInvaders.cpp  SpaceInvaders.h  main.cpp
examples/space_invaders/components/: Asteroid.h  Bullet.h  Player.h  PlayerComponent.h
examples/space_invaders/systems/: AsteroidSystem.cpp  AsteroidSystem.h  BulletSystem.cpp  BulletSystem.h  PlayerControllerSystem.cpp  PlayerControllerSystem.h
graphics_playground/: CMakeLists.txt  DefaultMaterial.cpp  DefaultMaterial.h  EmissiveMaterial.cpp  EmissiveMaterial.h  GraphicsPlayground.cpp  GraphicsPlayground.h  Material.cpp  Material.h  PBRMaterial.cpp  PBRMaterial.h  Transform.h  UUIDGenerator.h  glad.c  main.cpp
graphics_playground/common/: Math.hpp  Singleton.hpp
graphics_playground/components/: Camera.cpp  Camera.h  DirectionLight.h  Instances.h  MeshRenderer.h  PointLight.h  Transform.h
graphics_playground/core/: UUIDGenerator.h  Window.cpp  Window.h
graphics_playground/core/ecs/: ComponentManager.hpp  EntityManager.hpp
graphics_playground/core/managers/: InputManager.cpp  InputManager.h  ResourceManager.cpp  ResourceManager.h  ShaderManager.cpp  ShaderManager.h  SystemManager.cpp  SystemManager.h
graphics_playground/ecs/: ComponentArray.hpp  ComponentManager.hpp  Constants.hpp  EntityManager.hpp  Registry.hpp  View.hpp
graphics_playground/examples/demo/: DemoApp.cpp  DemoApp.h
graphics_playground/gpu/: GPUBackend.cpp  GPUBackend.h  GPUBatch.cpp  GPUBatch.h  GPUFrameBuffer.cpp  GPUFrameBuffer.h  GPUIndexBuffer.cpp  GPUIndexBuffer.h  GPUShader.cpp  GPUShader.h  GPUShaderProgram.cpp  GPUShaderProgram.h  GPUTexture.cpp  GPUTexture.h  GPUTypes.h  GPUUniformBuffer.cpp  GPUUniformBuffer.h  GPUVertexBuffer.cpp  GPUVertexBuffer.h
graphics_playground/gpu/gl/: GlBackend.cpp  GlBackend.h  GlBatch.cpp  GlBatch.h  GlFrameBuffer.cpp  GlFrameBuffer.h  (+15 more)
graphics_playground/platform/: Input.cpp  Input.h  Window.cpp  Window.h
graphics_playground/renderer/: Renderer.cpp  Renderer.h
graphics_playground/resources/: Material.h  Mesh.cpp  Mesh.h  ResourceManager.cpp  ResourceManager.h  Texture.cpp  Texture.h
graphics_playground/scene/: Camera.cpp  GameObject.h  Scene.h  World.cpp  World.h
graphics_playground/shaders/: ShaderManager.cpp  ShaderManager.h  blur.fs.h  default.fs.h  default.vs.h  defaultFS.fs  defaultVS.vs  lightFS.fs  pbr.fs.h  pbrFS.fs  post.fs.h  quad.fs.h  quad.vs.h  shadow.fs.h  shadow.vs.h  shadowFS.fs  shadowVS.vs  ssao.fs.h
graphics_playground/systems/: RenderSystem.cpp  RenderSystem.h  System.h  SystemManager.cpp  SystemManager.h
(+19 files in other folders)
